# fc_freezer

./: .gitignore  Cargo.toml  README.md  build.ps1
fc_driver/: Cargo.toml
fc_driver/src/: lib.rs
fc_freezer/: Cargo.toml  build.rs
fc_freezer/src/: config.rs  io.rs  lib.rs  main.rs  trainer.rs  worker.rs
fc_freezer/tests/: build_pipeline.rs
fc_shared/: Cargo.toml
fc_shared/src/: lib.rs
