[workspace]
members = [
    "fc_shared",
    "fc_driver",
    "fc_freezer"
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2024"

[workspace.dependencies]
fc_shared = { path = "fc_shared" }
windows-sys = "0.61.2"

[profile.release]
panic = "abort"
opt-level = 3
lto = true
codegen-units = 1
