[package]
name = "fc_driver"
version = "0.1.0"
edition = "2024"

[lib]
name = "fc_driver"
crate-type = ["staticlib"]

[dependencies]
fc_shared = { path = "../fc_shared" }
windows-sys = { version = "0.61.2", features = ["Win32_Foundation"] }

# ИСПРАВЛЕНО: Принудительный аборт при панике для no_std сборки без внешних файлов конфигурации
[profile.release]
panic = "abort"

[workspace]
