[package]
name = "fc_driver"
version = "0.1.0"
edition = "2024"

[lib]
name = "fc_driver"
crate-type = ["staticlib"]
bench = false
test = false

[dependencies]
fc_shared = { path = "../fc_shared" }
windows-sys = { version = "0.61.2", features = ["Win32_Foundation"] }

[profile.release]
panic = "abort"

[workspace]
