[package]
name = "fc_freezer"
version.workspace = true
edition.workspace = true

[dependencies]
fc_shared = { workspace = true }
windows-sys = { workspace = true, features = [
    "Win32_System_Threading",
    "Win32_System_Diagnostics_Debug",
    "Win32_System_Diagnostics_ToolHelp",
    "Win32_System_ProcessStatus",
    "Win32_Storage_FileSystem",
    "Win32_System_IO",
    "Win32_Foundation",
    "Win32_UI_Input_KeyboardAndMouse"
] }
ratatui = "0.26.1"
crossterm = { version = "0.27.0", features = ["events"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
